# whiteboard_retrieval

./: .gitignore  README.md  app.py  main.py  pyproject.toml  reset.sh
scripts/: reset_vector_store.py
src/: app.py  mistralai_api.py  mistralai_ocr.py  model.py  openai_api.py  stella.py
src/domain/: vector_store.py
src/static/: debate.html  index.html  list.html  record.html  register.html  search.html
src/static/css/: common.css  debate.css  index.css  list.css  record.css  register.css
src/static/js/: debate.js  index.js  list.js  record.js  register.js  script.js
