[project]
name = "whiteboard-retrieval"
version = "0.1.0"
description = ""
authors = [
    {name = "kento2247",email = "tkento1985@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "openai (>=1.66.3,<2.0.0)",
    "xformers (>=0.0.29.post3,<0.0.30)",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
